# jumper_wrapper_kernel

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.binder/: Dockerfile
.github/workflows/: docs.yml
demos/: h2o-wrapper-tutorial.ipynb  new_R_wrapping.ipynb
demos/.ipynb_checkpoints/: h2o-wrapper-tutorial-checkpoint.ipynb
docs/: index.md
docs/api/: index.md  install.md  kernel.md  utilities.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: magic-commands.md  wrap-kernel.md
jumper_wrapper_kernel/: __init__.py  __main__.py  icon_utils.py  install.py  kernel.py  utilities.py
kernel_wrapper/: __init__.py  __main__.py  install.py  kernel.py
kernel_wrapper/kernelspec/: kernel.json
latest/: 404.html  objects.inv
latest/api/: index.html
latest/api/install/: index.html
latest/getting-started/installation/: index.html
latest/guides/magic-commands/: index.html
latest/guides/wrap-kernel/: index.html
pr-/: index.html
pr-/api/: index.html
pr-/api/install/: index.html
pr-/api/kernel/: index.html
pr-/api/utilities/: index.html
pr-/getting-started/installation/: index.html
pr-/getting-started/quickstart/: index.html
pr-/guides/magic-commands/: index.html
pr-/guides/wrap-kernel/: index.html
pr-/search/: search_index.json
pr-2/api/: index.html
pr-2/api/install/: index.html
pr-2/guides/wrap-kernel/: index.html
pr-2/search/: search_index.json
pr-3/: 404.html  index.html
pr-3/search/: search_index.json
pr-5/: 404.html  index.html
tests/: conftest.py  test_kernel.py
(+9 files in other folders)
